--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>4nderflow</title>
     <link rel="stylesheet" href="assets/stylesheets/first-styles.css">
     <link rel="shortcut icon" href="assets/img/mita-pfp.jpg" type="image/x-icon">
-    <meta property="og:title" content="4nderflow (Open Sources)">
+    <meta property="og:title" content="4nderflow">
     <meta property="og:description" content="Hello, I'm Ander, a self-taught developer (web developer) with 5+ years of experience...">
     <meta property="og:image" content="assets/img/mita-pfp.png">
     <meta property="og:type" content="GitHub: 4nderflow">
@@ -33,7 +33,7 @@
     <section id="about" class="about-me">
         <h1>About Me:</h1>
         <div class="desc">
-            <i>My name is Ander, a self-thaught developer (front-end web developer). I love to play video games and makee random stuff with my coding skills.</i>
+            <i>My name is Ander, a self-taught developer (front-end web developer). I love to play video games and makee random stuff with my coding skills.</i>
         </div>
 
       
