--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/img/mita-pfp.jpg" type="image/x-icon">
     <meta property="og:title" content="4nderflow">
     <meta property="og:description" content="Hello, I'm Ander, a self-taught developer (web developer) with 5+ years of experience...">
-    <meta property="og:image" content="assets/img/mita-pfp.png">
+    <meta property="og:image" content="https://4nderflow.github.io/4nderflow-portfolio/assets/img/mita-pfp.jpg">
     <meta property="og:type" content="GitHub: 4nderflow">
 </head>
 <body>
