--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <div class="nav-bar-links-contain">
-        <a href="https://discord.gg/GuQKsUTVec">Join Server</a>
+        <a href="https://github.com/4nderflow/4nderflow-portfolio">Join Server</a>
         <a href="https://youtube.com/@4nderflow">YouTube</a>
         <a href="https://github.com/4nderflow">GitHub</a>
     </div>
@@ -66,7 +66,7 @@
         </div>
 
         <h1 class="second-head" style="font-size: 1.3em;">Looking for my old projects?</h1>
-        <a href="https://discord.gg/GuQKsUTVec">Get Access</a>
+        <a href="https://github.com/4nderflow/4nderflow-portfolio">Get Access</a>
 
     </section>
 
